# ChangeLog for media-gfx/optipng
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/optipng/ChangeLog,v 1.49 2009/03/06 16:27:44 armin76 Exp $

  06 Mar 2009; Raúl Porcel <armin76@gentoo.org> optipng-0.6.2-r1.ebuild:
  alpha stable wrt #260265

  04 Mar 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  optipng-0.6.2-r1.ebuild:
  ppc stable, bug #260265

  25 Feb 2009; Markus Meier <maekke@gentoo.org> optipng-0.6.2-r1.ebuild:
  amd64/x86 stable, bug #260265

*optipng-0.6.2-r1 (25 Feb 2009)

  25 Feb 2009; Tristan Heaven <nyhm@gentoo.org> +optipng-0.6.2-r1.ebuild:
  Security patch, bug #260265

  07 Dec 2008; Tristan Heaven <nyhm@gentoo.org> optipng-0.6.2.ebuild:
  Pick up CFLAGS in src_compile instead of src_unpack, bug #240800

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  optipng-0.6.2.ebuild:
  ppc stable, bug #246522

  15 Nov 2008; Raúl Porcel <armin76@gentoo.org> optipng-0.6.2.ebuild:
  alpha stable wrt #246522

  15 Nov 2008; Markus Meier <maekke@gentoo.org> optipng-0.6.2.ebuild:
  amd64/x86 stable, bug #246522

*optipng-0.6.2 (11 Nov 2008)

  11 Nov 2008; Tristan Heaven <nyhm@gentoo.org> +optipng-0.6.2.ebuild:
  Version bump

*optipng-0.6.1 (24 Aug 2008)

  24 Aug 2008; Tristan Heaven <nyhm@gentoo.org> +optipng-0.6.1.ebuild:
  Version bump, bug #232577

  17 Feb 2008; Christian Faulhammer <opfer@gentoo.org> optipng-0.5.5.ebuild:
  stable amd64, bug 209941

  14 Feb 2008; nixnut <nixnut@gentoo.org> optipng-0.5.5.ebuild:
  Stable on ppc wrt bug 209941

  13 Feb 2008; Raúl Porcel <armin76@gentoo.org> optipng-0.5.5.ebuild:
  alpha stable wrt #209941

  13 Feb 2008; Tristan Heaven <nyhm@gentoo.org> optipng-0.5.5.ebuild:
  Fix possible sed problem, bug #209990

  13 Feb 2008; Christian Faulhammer <opfer@gentoo.org> optipng-0.5.5.ebuild:
  stable x86, bug 209941

  31 Jan 2008; Tristan Heaven <nyhm@gentoo.org>
  -files/optipng-zlib-security.diff, metadata.xml, -optipng-0.4.8-r1.ebuild,