@@ -1,6 +1,7 @@
 DIST optipng-0.6.2.1.diff 1984 RMD160 e144a8894806e7753da76e5142bb1b90304590fe SHA1 d4456bc5d10e0ec1cf9a260da17f63e31a40dc48 SHA256 b39e748b24ea51ac55aa2b5fae1a3f31e9ede5321941ec3da2904351fe625b69
 DIST optipng-0.6.2.tar.gz 1052509 RMD160 cd9ecfbd1c8901d14cb93fbc9f07403071cea37e SHA1 374b3537a262590ba2822f2b10d9241247b4da95 SHA256 84312506ea0c683a4e7675b3c8278067222762520016cc61e53c2b0e679120ca
+DIST optipng-0.6.3.tar.gz 1060571 RMD160 3ef55878defee86a57b8b0b268da1a7e9eca0d14 SHA1 eba6e3c940588b1d02abfabc407e5c759a3fdd8a SHA256 d11630955e2e72f07dd0aa1270f9d20caaef41796fdbfbbc1caad5b931fdf721
 EBUILD optipng-0.6.2-r1.ebuild 1142 RMD160 16b6e2eb2fb5ca232f775189a66b1ef5b242d76a SHA1 f07d938e770a67fe454a4f25bbc86fa4b3d83e3d SHA256 a1d19e47220f30d615155fcde8756774fac0dcab71d67d10cd50a9836c8933a8
-EBUILD optipng-0.6.2.ebuild 1056 RMD160 288ab3f8eb9cd8cca71d5858e6554d952abad76d SHA1 b9f1c303fbe3cbe8512a232faf6301060855c9ae SHA256 721610f475805b2cdfdedf44c1a1d95c51b7dc83cd209ea9b603c66a837a3f11
-MISC ChangeLog 6201 RMD160 825aa14de34fc5f8aca88e5f96dfebffe5768dcd SHA1 cd16c45be543c89ee2ead2a742e0eeeda3263976 SHA256 c3d2b32e468676a5232759f67a9461d9772d07e53d00f1977d4a740f9aaf3ce9
+EBUILD optipng-0.6.3.ebuild 1171 RMD160 803dd056de1a3cc5ce5e8fd0b9f422e04a18077e SHA1 4c9d459409143185ab1fc012c21673162ed0fdb8 SHA256 88ded680730504d57cddf307d3e380b67d948774e02d06f742e94949ed9f3993
+MISC ChangeLog 6315 RMD160 2deb444abfe86267a5bf34d1e0a0b79f7e388931 SHA1 24937ca10c818c0bb14e3002468a80a859114d95 SHA256 b0d9a2bf8403fa1deb4dcf4436c27dfb0f02c22dd941a23991c15b3ca8618a33
 MISC metadata.xml 253 RMD160 33155d552badd3133f93e25bfcd82b62d296deb9 SHA1 b30245f00aae656e7a024b2ab4b8ad8e5549250f SHA256 2ddc2634b7e897546998869bcf0803bfbf4940cb75da9e45a2a8f421b4dabfd3
