@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/optipng
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/optipng/ChangeLog,v 1.49 2009/03/06 16:27:44 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/optipng/ChangeLog,v 1.50 2009/05/19 12:03:35 nyhm Exp $
+
+*optipng-0.6.3 (19 May 2009)
+
+  19 May 2009; Tristan Heaven <nyhm@gentoo.org> +optipng-0.6.3.ebuild:
+  Version bump
 
   06 Mar 2009; Raúl Porcel <armin76@gentoo.org> optipng-0.6.2-r1.ebuild:
   alpha stable wrt #260265
